--- a/uliweb-apps-example3-vuejs/apps/example/templates/index.html
+++ b/uliweb-apps-example3-vuejs/apps/example/templates/index.html
@@ -3,6 +3,7 @@
 {{block content_main}}
 {{use "ui.vue"}}
 
+<h2>Example 1: 最简例子</h2> <hr>
 <div id="app">
     { message }
 </div>
@@ -16,7 +17,7 @@ var app = new Vue({
     delimiters: ['{', '}']
 })
 </script>
-<!-- -------------------------- --> <hr>
+<h2>Example 2：动态绑定</h2> <hr>
 <div id="app-2">
     <span v-bind:title="message">
         鼠标悬停几秒钟查看此处动态绑定的提示信息！
@@ -31,7 +32,8 @@ var app2 = new Vue({
     delimiters: ['{', '}']
 })
 </script>
-<!-- -------------------------- --> <hr>
+
+<h2>Example 3: v-if</h2> <hr>
 <div id="app-3">
   <p v-if="seen">现在你看到我了</p>
 </div>
@@ -44,7 +46,8 @@ var app3 = new Vue({
   delimiters: ['{', '}']
 })
 </script>
-<!-- -------------------------- --> <hr>
+
+<h2>Example 4: v-for</h2> <hr>
 <div id="app-4">
   <ol>
     <li v-for="todo in todos">
@@ -65,7 +68,8 @@ var app4 = new Vue({
   delimiters: ['{', '}']
 })
 </script>
-<!-- -------------------------- --> <hr>
+
+<h2>Example 5: 动态改变</h2> <hr>
 <div id="app-5">
   <p>{ message }</p>
   <button v-on:click="reverseMessage">逆转消息</button>
@@ -84,7 +88,8 @@ var app5 = new Vue({
   delimiters: ['{', '}']
 })
 </script>
-<!-- -------------------------- --> <hr>
+
+<h2>Example 6: 双向绑定</h2> <hr>
 <div id="app-6">
   <p>{ message }</p>
   <input v-model="message">
@@ -98,8 +103,31 @@ var app6 = new Vue({
   delimiters: ['{', '}']
 })
 </script>
-<!-- -------------------------- --> <hr>
+
+<h2>Example 7: 最简组件</h2> <hr>
 <div id="app-7">
+<child message="hello!"></child>
+</div>
+<script>
+Vue.component('child', {
+  // 声明 props
+  props: ['message'],
+  // 就像 data 一样，prop 也可以在模板中使用
+  // 同样也可以在 vm 实例中通过 this.message 来使用
+  template: '<span>{ message }</span>',
+  delimiters: ['{', '}']
+})
+var app8 = new Vue({
+  el: '#app-7',
+  data: {
+  },
+  delimiters: ['{', '}']
+})
+</script>
+
+
+<h2>Example 8: todo组件</h2> <hr>
+<div id="app-8">
     <ol>
         <!--
         现在我们为每个 todo-item 提供 todo 对象
@@ -119,8 +147,8 @@ Vue.component('todo-item', {
   template: '<li>{ todo.text }</li>',
   delimiters: ['{', '}']
 })
-var app7 = new Vue({
-  el: '#app-7',
+var app8 = new Vue({
+  el: '#app-8',
   data: {
     groceryList: [
       { id: 0, text: '蔬菜' },
