--- a/uliweb-apps-example3-vuejs/apps/example/templates/index.html
+++ b/uliweb-apps-example3-vuejs/apps/example/templates/index.html
@@ -3,7 +3,7 @@
 {{block content_main}}
 {{use "ui.vue"}}
 
-<h2>Example 1: 最简例子</h2> <hr>
+<h2>Example 最简 [<a href="https://cn.vuejs.org/v2/guide/index.html">link</a>]</h2> <hr>
 <div id="app">
     { message }
 </div>
@@ -17,7 +17,7 @@ var app = new Vue({
     delimiters: ['{', '}']
 })
 </script>
-<h2>Example 2：动态绑定</h2> <hr>
+<h2>Example 动态绑定 [<a href="https://cn.vuejs.org/v2/guide/index.html#%E5%A3%B0%E6%98%8E%E5%BC%8F%E6%B8%B2%E6%9F%93">link</a>]</h2> <hr>
 <div id="app-2">
     <span v-bind:title="message">
         鼠标悬停几秒钟查看此处动态绑定的提示信息！
@@ -33,7 +33,7 @@ var app2 = new Vue({
 })
 </script>
 
-<h2>Example 3: v-if</h2> <hr>
+<h2>Example v-if [<a href="https://cn.vuejs.org/v2/guide/index.html#%E6%9D%A1%E4%BB%B6%E4%B8%8E%E5%BE%AA%E7%8E%AF">link</a>]</h2> <hr>
 <div id="app-3">
   <p v-if="seen">现在你看到我了</p>
 </div>
@@ -47,7 +47,7 @@ var app3 = new Vue({
 })
 </script>
 
-<h2>Example 4: v-for</h2> <hr>
+<h2>Example v-for [<a href="https://cn.vuejs.org/v2/guide/index.html#%E6%9D%A1%E4%BB%B6%E4%B8%8E%E5%BE%AA%E7%8E%AF">link</a>]</h2> <hr>
 <div id="app-4">
   <ol>
     <li v-for="todo in todos">
@@ -69,7 +69,7 @@ var app4 = new Vue({
 })
 </script>
 
-<h2>Example 5: 动态改变</h2> <hr>
+<h2>Example 动态改变 [<a href="https://cn.vuejs.org/v2/guide/index.html#%E5%A4%84%E7%90%86%E7%94%A8%E6%88%B7%E8%BE%93%E5%85%A5">link</a>]</h2> <hr>
 <div id="app-5">
   <p>{ message }</p>
   <button v-on:click="reverseMessage">逆转消息</button>
@@ -89,7 +89,7 @@ var app5 = new Vue({
 })
 </script>
 
-<h2>Example 6: 双向绑定</h2> <hr>
+<h2>Example 双向绑定 [<a href="https://cn.vuejs.org/v2/guide/index.html#%E5%A4%84%E7%90%86%E7%94%A8%E6%88%B7%E8%BE%93%E5%85%A5">link</a>]</h2> <hr>
 <div id="app-6">
   <p>{ message }</p>
   <input v-model="message">
@@ -104,7 +104,7 @@ var app6 = new Vue({
 })
 </script>
 
-<h2>Example 7: 最简组件</h2> <hr>
+<h2>Example 最简组件 [<a href="https://cn.vuejs.org/v2/guide/components.html#Prop">link</a>]</h2> <hr>
 <div id="app-7">
 <e7-child message="hello!"></e7-child>
 </div>
@@ -126,7 +126,7 @@ var app8 = new Vue({
 </script>
 
 
-<h2>Example 8: todo组件</h2> <hr>
+<h2>Example todo组件 [<a href="https://cn.vuejs.org/v2/guide/components.html#%E5%8A%A8%E6%80%81-Prop">link</a>]</h2> <hr>
 <div id="app-8">
     <ol>
         <!--
@@ -160,7 +160,7 @@ var app8 = new Vue({
 })
 </script>
 
-<h2>Example 9: 组件之使用v-bind实现动态prop</h2> <hr>
+<h2>Example 组件之使用v-bind实现动态prop [<a href="https://cn.vuejs.org/v2/guide/components.html#%E5%8A%A8%E6%80%81-Prop">link</a>]</h2> <hr>
 <div id="app-9">
   <input v-model="parentMsg">
   <br>
@@ -184,7 +184,7 @@ var app9 = new Vue({
 })
 </script>
 
-<h2>Example 10: 父组件在使用子组件的地方用 v-on 来监听子组件触发的事件</h2> <hr>
+<h2>Example 父组件在使用子组件的地方用 v-on 来监听子组件触发的事件 [<a href="https://cn.vuejs.org/v2/guide/components.html#%E4%BD%BF%E7%94%A8-v-on-%E7%BB%91%E5%AE%9A%E8%87%AA%E5%AE%9A%E4%B9%89%E4%BA%8B%E4%BB%B6">link</a>]</h2> <hr>
 <div id="app-10">
   <p>{ total }</p>
   <button-counter v-on:increment="incrementTotal"></button-counter>
@@ -222,7 +222,7 @@ new Vue({
 })
 </script>
 
-<h2>Example 11: 子组件使用$emit发送消息到父组件</h2> <hr>
+<h2>Example 子组件使用$emit发送消息到父组件 [<a href="https://cn.vuejs.org/v2/guide/components.html#%E4%BD%BF%E7%94%A8-v-on-%E7%BB%91%E5%AE%9A%E8%87%AA%E5%AE%9A%E4%B9%89%E4%BA%8B%E4%BB%B6">link</a>]</h2> <hr>
 <div id="app-11">
   <p v-for="msg in messages">{ msg }</p>
   <button-message v-on:message="handleMessage"></button-message>
@@ -260,7 +260,7 @@ new Vue({
 })
 </script>
 
-<h2>Example 12: 表单输入组件和v-model</h2> <hr>
+<h2>Example 表单输入组件和v-model [<a href="https://cn.vuejs.org/v2/guide/components.html#%E8%87%AA%E5%AE%9A%E4%B9%89%E7%BB%84%E4%BB%B6%E7%9A%84-v-model">link</a>]</h2> <hr>
 <div id="app-12">
   <currency-input v-model="price"></currency-input>
 </div>
@@ -306,7 +306,7 @@ new Vue({
 })
 </script>
 
-<h2>Example 13: 组件之单个插槽</h2> <hr>
+<h2>Example 组件之单个插槽 [<a href="https://cn.vuejs.org/v2/guide/components.html#%E5%8D%95%E4%B8%AA%E6%8F%92%E6%A7%BD">link</a>]</h2> <hr>
 <div id="app-13">
   <div>
     <h3>我是父组件的标题</h3>
@@ -334,7 +334,7 @@ new Vue({
 })
 </script>
 
-<h2>Example 14: 组件之具名插槽</h2> <hr>
+<h2>Example 组件之具名插槽 [<a href="https://cn.vuejs.org/v2/guide/components.html#%E5%85%B7%E5%90%8D%E6%8F%92%E6%A7%BD">link</a>]</h2> <hr>
 <div id="app-14">
   <app-layout>
     <h3 slot="header">这里可能是一个页面标题</h3>
@@ -368,7 +368,7 @@ new Vue({
 })
 </script>
 
-<h2>Example 15: 组件之作用域插槽</h2> <hr>
+<h2>Example 组件之作用域插槽 [<a href="https://cn.vuejs.org/v2/guide/components.html#%E4%BD%9C%E7%94%A8%E5%9F%9F%E6%8F%92%E6%A7%BD">link</a>]</h2> <hr>
 <div id="app-15">
   <div class="parent">
     <e15-child>
@@ -396,7 +396,7 @@ new Vue({
 })
 </script>
 
-<h2>Example 16: 组件之递归组件</h2> <hr>
+<h2>Example 组件之递归组件 [<a href="https://cn.vuejs.org/v2/guide/components.html#%E9%80%92%E5%BD%92%E7%BB%84%E4%BB%B6">link</a>]</h2> <hr>
 <div id="app-16">
   <e16-comr :count="1"></e16-comr>
 </div>
@@ -423,7 +423,7 @@ new Vue({
 })
 </script>
 
-<h2>Example 17: 组件之异步组件</h2> <hr>
+<h2>Example 组件之异步组件 [<a href="https://cn.vuejs.org/v2/guide/components.html#%E5%BC%82%E6%AD%A5%E7%BB%84%E4%BB%B6">link</a>]</h2> <hr>
 <div id="app-17">
   <e17-com></e17-com>
 </div>
@@ -442,7 +442,7 @@ new Vue({
 })
 </script>
 
-<h2>Example 18: 组件之手动挂载</h2> <hr>
+<h2>Example 组件之手动挂载</h2> <hr>
 <div id="app-18">
     <div id="e18com"> original</div>
 </div>
